--- a/core/i18n/it_IT.json
+++ b/core/i18n/it_IT.json
@@ -183,9 +183,9 @@
     "plugins\/homebridge\/desktop\/js\/homebridge.js": {
         "Santé homebridge": "Santé homebridge",
         "DebugInfo Homebridge": "DebugInfo Homebridge",
-        "Configuration homebridge du Plugin \"+name_plugin+\"": "Configuration homebridge du Plugin \"+name_plugin+\"",
+        "Configuration homebridge du Plugin": "Configuration homebridge du Plugin",
         "Configuration homebridge de la Pièce": "Configuration homebridge de la Pièce",
-        "Configuration homebridge du Scénario \"+name_scenario+\"": "Configuration homebridge du Scénario \"+name_scenario+\""
+        "Configuration homebridge du Scénario": "Configuration homebridge du Scénario"
     },
     "plugins\/homebridge\/desktop\/js\/accessoryFile.js": {
         "Sauvegarde de la configuration réussie. Relancez le demon": "Sauvegarde de la configuration réussie. Relancez le demon",
